add code chunk to convert code to its own script
allows all code from the Rmd file to be automatically converted into an R script

--- a/scripts/clustering-countries.Rmd
+++ b/scripts/clustering-countries.Rmd
@@ -420,5 +420,8 @@ db_clust %>%
     -   [Model-based clustering: an introduction to Gaussian Mixture Models (video)](https://youtu.be/h7RVeO-P3zc)
 -   Density-based clustering
 
-To put just code in our R script:
-knitr::purl(input = 'clustering-countries.Rmd', output = 'clustering-countries.R')
+```{r, include=FALSE}
+# To put just code in our R script (runs every time this document is knit):
+knitr::purl(input = 'clustering-countries.Rmd', 
+            output = 'clustering-countries.R')
+```
