--- a/scripts/clustering-countries.Rmd
+++ b/scripts/clustering-countries.Rmd
@@ -17,6 +17,7 @@ pre code, pre, code {
 }
 </style>
 ```
+
 ```{r, include=FALSE}
 # set code chunk options
 knitr::opts_chunk$set(echo = TRUE, 
@@ -216,11 +217,11 @@ plot_map <- function(.df) {
     # (left) join 'world' dataframe with another dataframe at columns with the country names
     left_join(.df, by = c("region" = "country")) %>%
     # plot the map
-    ggplot() + 
-    geom_polygon(aes(x = long, y = lat, fill = cluster, group = group),
-                 color = "white") +
-    coord_fixed(1.3) +
-    theme(legend.position = "top")
+    ggplot() +
+      geom_polygon(aes(x = long, y = lat, fill = cluster, group = group),
+                   color = "white") +
+      coord_fixed(1.3) +
+      theme(legend.position = "top")
 }
 ```
 
@@ -272,7 +273,7 @@ df %>%
 
 # Model-based clustering
 
-Clusters are not necessarily strict boundaries -- for example, if a point is further away from the center of a cluster, then it may be less likely to be in that cluster. To account for this uncertainty, one assumption we can make is that the clusters follow a (multivariate) normal distribution, which is a probability density function. (More formally, this model-based clustering method uses the Gaussian mixture model.) An example of this with two variables is shown below.
+Clusters are not necessarily strict boundaries -- for example, if a point is further away from the center of a cluster, then it may be less likely to be in that cluster. To account for this uncertainty, one assumption we can make is that the clusters follow a (multivariate) normal distribution, which is a probability density function. (More formally, this method is called Gaussian mixture models clustering.) An example of this with two variables is shown below.
 
 <br>
 
@@ -280,11 +281,11 @@ Clusters are not necessarily strict boundaries -- for example, if a point is fur
 
 </br>
 
-To define such a distribution for a given set of observations, we need to define a covariance matrix. We won't get into the mathematical details here (see [this paper](https://stat.uw.edu/sites/default/files/files/reports/2012/tr597.pdf) for a more rigorous treatment), but the basic idea is that by modifying this matrix, we can create different types of clusters that are determined by three aspects:
+To define such a distribution for a given set of observations, we need to find its covariance matrix. We won't get into the mathematical details here (see [this paper](https://stat.uw.edu/sites/default/files/files/reports/2012/tr597.pdf) for a more rigorous treatment), but the basic idea is that by modifying this matrix, we can create different types of clusters that are determined by three aspects:
 
--   **Volume:** the number of observations in each cluster
-    -   *Equal:* all clusters have (roughly) the same number of observations
-    -   *Variable:* the clusters can have varying number of observations
+-   **Volume:** the amount of space that each cluster contains
+    -   *Equal:* all clusters have the same volume
+    -   *Variable:* the clusters can have different volumes
 -   **Shape:** the width of the clusters
     -   *Equal:* all clusters have the same shape (e.g. all spherical, all elliptical)
     -   *Variable:* the clusters can have different shapes
@@ -306,11 +307,11 @@ Below is a table containing all of the possible types of clusters. The identifie
 
 </br>
 
-Here are some visuals to accompany the table above (note that not all of the models are shown).
+Here are some visuals to accompany the table above.
 
 <br>
 
-<center>![Image by [Rebecca Nugent](https://www.stat.cmu.edu/~rnugent/PUBLIC/teaching/CMU729/Lectures/MBCComments.pdf)](../img/mb-cluster-models-visual.png){width="433"}</center>
+<center>![Image by [Scrucca et al. (2016)](https://www.ncbi.nlm.nih.gov/pmc/articles/PMC5096736/)](../img/mb-cluster-models-visual.jpeg){width="495"}</center>
 
 </br>
 
