--- a/scripts/clustering-countries.Rmd
+++ b/scripts/clustering-countries.Rmd
@@ -429,9 +429,8 @@ To find the best epsilon value, we trying to find a 'knee' in the graph. And for
 
 ```{r}
 scale.df <- df %>% scale()
-dist <- scale.df %>% dist()
-df.matrix <- as.matrix(dist)
-kNNdistplot(dist, k=10)
+df.matrix <- as.matrix(scale.df)
+kNNdistplot(df.matrix, k=10)
 abline(h=2.5, col="red")
 ```
 
